--- a/src/styles/components/form.scss
+++ b/src/styles/components/form.scss
@@ -9,7 +9,9 @@
 
     svg {
       position: absolute;
-      bottom: 22px;
+      width: 18px;
+      height: 24px;
+      bottom: 19px;
       left: 27px;
     }
   }
