--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -27,4 +27,4 @@ append content
 
 append scripts
   script(src="https://179523.selcdn.ru/public/prod-scripts/cis_footer.js")
-  //- script(defer src="https://179523.selcdn.ru/public/delivery-banner/banner.js")
+  script(defer src="https://179523.selcdn.ru/public/delivery-banner/banner.js")
