--- a/src/styles/components/doctor.scss
+++ b/src/styles/components/doctor.scss
@@ -20,7 +20,6 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin-bottom: 15px;
     @include rm(1024) {
       min-width: 300px;
       margin: 0 20px 0 0;
@@ -65,8 +64,10 @@
   }
   &__header {
     margin-bottom: 10px;
-    font-size: 26px;
-    
+    font-size: 20px;
+    @include rm(480) {
+      font-size: 26px;
+    }
     @include rm(1220) {
       font-size: 32px;
       margin-bottom: 20px;
