--- a/src/styles/components/use.scss
+++ b/src/styles/components/use.scss
@@ -98,9 +98,9 @@
       font-weight: 700;
       line-height: 1;
       
-      @include rm(480) {
-        top: 10px;
-      }
+      // @include rm(480) {
+      //   top: 10px;
+      // }
       @include rm(1220) {
         top: calc(50% - 40px);
         left: -80px;
