--- a/src/templates/components/complications.pug
+++ b/src/templates/components/complications.pug
@@ -9,15 +9,15 @@ section.complications.block.bg
             img.complications__img(src="img/complications__01.jpg", alt="image", loading="lazy")
         h3.complications__header.bg__line.bg__line__white Воспаление
         p.complications__text Грыжа может 
-          span.text__blue инфицироваться и воспалиться
-          | . Это приводит к высокой температуре, рвоте, запорам, болям.
+          span.text__blue инфицироваться и&nbsp;воспалиться
+          | . Это приводит к&nbsp;высокой температуре, рвоте, запорам, болям.
       li.complications__item
         .complications__img_wrapper
           picture
             source(srcset="img/complications__02.webp", type="image/webp")
             img.complications__img(src="img/complications__02.jpg", alt="image", loading="lazy")
         h3.complications__header.bg__line.bg__line__white Невправимость
-        p.complications__text Со временем от грыжи уже не избавиться ручным вправлением. Она становится больше, выпирает из-под одежды.
+        p.complications__text Со временем от грыжи уже не&nbsp;избавиться ручным вправлением. Она становится больше, выпирает из-под одежды.
           span.text__blue  Поможет только операция.
       li.complications__item
         .complications__img_wrapper
@@ -25,14 +25,14 @@ section.complications.block.bg
             source(srcset="img/complications__03.webp", type="image/webp")
             img.complications__img(src="img/complications__03.jpg", alt="image", loading="lazy")
         h3.complications__header.bg__line.bg__line__white Скопление кала в кишечнике
-        p.complications__text Возникает, если в грыжевом мешке находится толстая кишка. Приводит к
-          span.text__blue  болезненным запорам.
+        p.complications__text Возникает, если в грыжевом мешке находится толстая кишка. Приводит к&nbsp;
+          span.text__blue болезненным запорам.
       li.complications__item
         .complications__img_wrapper
           picture
             source(srcset="img/complications__04.webp", type="image/webp")
             img.complications__img(src="img/complications__04.jpg", alt="image", loading="lazy")
         h3.complications__header.bg__line.bg__line__white Дисфункция органов
-        p.complications__text Органы, которые попадают в грыжу, прекращают функционировать. Возникает острая
+        p.complications__text Органы, которые попадают в&nbsp;грыжу, прекращают функционировать. Возникает острая
           span.text__blue  нестерпимая боль 
-          | в области “отмирающих” органов, поднимается температура.
+          | в&nbsp;области “отмирающих” органов, поднимается температура.
