--- a/src/templates/components/composition.pug
+++ b/src/templates/components/composition.pug
@@ -6,10 +6,10 @@ section.composition.block.bg
     .composition__wrapper__main
       .composition__wrapper__left
         picture
-          source(media="(max-width: 767px)", srcset="img/prod3_mob.webp", type="image/webp")
-          source(media="(max-width: 767px)", srcset="img/prod3_mob.png")
-          source(srcset="img/prod3.webp", type="image/webp")
-          img.composition__prod(src="img/prod3.png", alt="Traufril")
+          source(media="(max-width: 767px)", srcset="img/prod_mob.webp", type="image/webp")
+          source(media="(max-width: 767px)", srcset="img/prod_mob.png")
+          source(srcset="img/prod.webp", type="image/webp")
+          img.composition__prod(src="img/prod.png", alt="Traufril")
       //- .composition__wrapper__right
       ul.composition__list
         li.composition__item
@@ -18,7 +18,7 @@ section.composition.block.bg
             img.composition__img(src="img/composition__01.png", alt="" loading="lazy")
           .composition__text_wrapper
             h3.composition__header Протеины крови марала и&nbsp;бобрового мускуса
-            p.composition__text способствует уменьшению грыжи восстанавливая стенки брюшной полости и повышая эластичность
+            p.composition__text способствует уменьшению грыжи восстанавливая стенки брюшной полости и&nbsp;повышая эластичность
         li.composition__item
           picture
             source(srcset="img/composition__02.webp", type="image/webp")
