--- a/src/templates/components/doctor.pug
+++ b/src/templates/components/doctor.pug
@@ -3,7 +3,7 @@ section.doctor.block.bg
     .doctor__wrapper
       .doctor__wrapper_text
         h2.doctor__title.title Мнение эксперта:
-        h3.doctor__header.header__text “Пока болезнь не запущена - лучше лечить её растительными препаратами”
+        h3.doctor__header.header__text “Пока болезнь не запущена - лучше лечить её&nbsp;растительными препаратами”
         p.doctor__subtitle.text__black врач-хирург высшей категории, кандидат медицинских наук 
           span.bold.text__orange Алексей Колесников
         p.doctor__text Несмотря на то, что я всю жизнь проработал хирургом и всегда относился, так сказать, к лагерю традиционной медицины, я часто выписываю людям средства из народной медицины. Объясняю почему: хирургические методы борьбы с грыжей предназначены для людей, у которых уже запущенные случаи. 
