--- a/src/templates/components/oldman.pug
+++ b/src/templates/components/oldman.pug
@@ -2,17 +2,28 @@ section.oldman.block
   .container
     .oldman__wrapper
       .oldman__wrapper_text
-        h2.oldman__title.title “Я и мой дед вылечили грыжи на животе и паху с этими травами. Я рад, что теперь мой рецепт доступен каждому!” 
+        h2.oldman__title.title “Я и мой дед вылечили грыжи на животе и паху с этими 
+          | травами. Я рад, что теперь мой рецепт доступен каждому!” 
         p.oldman__subtitle.text__black — создатель растительной формулы 
           span.text__orange.black Трауфрила 
-        p.oldman__text Операции все эти ваши - это глупости! Мне уже почти 90 лет, и я здоров как бык, ни одной операции за жизнь не делал. Хотя чего со мной только было: и болячки разные, и грыжи… Вырос я в семье травников, и занимаюсь этим всю жизнь. Я всегда находил правильное сочетание трав и лечил себя сам! И за моими целебными рецептами вот уже лет 70 выстраиваются очереди со всей округи.
+        p.oldman__text Операции все эти ваши - это глупости! Мне уже почти 90 лет, 
+          | и я здоров как бык, ни одной операции за жизнь не делал. Хотя чего со 
+          | мной только было: и болячки разные, и грыжи… Вырос я в семье травников, 
+          | и занимаюсь этим всю жизнь. Я всегда находил правильное сочетание трав 
+          | и лечил себя сам! И за моими целебными рецептами вот уже лет&nbsp;70&nbsp;выстраиваются 
+          | очереди со всей округи.
         p.oldman__text Был у меня как-то один паренёк, 
           span.text__black.bold запущенный случай. У него грыжа возле пупка торчала. 
-          | Говорил, что операцию надо делать - а я ему свою мазь дал, собственного, так сказать, изготовления. Парень носом поворочал, но мазь взял. И что вы думаете, всё у него теперь восстановилось. Не за два дня, конечно, но тем не менее 
+          | Говорил, что операцию надо делать - а я ему свою мазь дал, собственного, 
+          | так сказать, изготовления. Парень носом поворочал, но мазь взял. И что вы 
+          | думаете, всё у него теперь восстановилось. Не за два дня, конечно, но тем не менее 
           span.text__black.bold не пришлось на операционный стол&nbsp;ложиться. 
-        p.oldman__text Я много разных рецептов на травах знаю, и с грыжами ещё от своего деда знаю, что надо делать. Без прополиса, любистка и леспедецы здесь не обойтись. 
+        p.oldman__text Я много разных рецептов на травах знаю, и с грыжами ещё от своего 
+          | деда знаю, что надо делать. Без прополиса, любистка и леспедецы здесь не обойтись. 
           span.text__black.bold И грыжа перестает выпадать, и со временем орган там становится на место. 
-          | Но у этой мази один минус есть - её надо сразу намазывать. И тут уже надо мазь как-то сильно запечатывать, иначе пропадет она. Вот те, кто у меня рецепт купили и продают её теперь в интернете - они мою мазь поместили в&nbsp;ампулы по моему совету, и правильно сделали.
+          | Но у этой мази один минус есть - её&nbsp;надо сразу намазывать. И тут уже надо 
+          | мазь как-то сильно запечатывать, иначе пропадет она. Вот те, кто у меня рецепт 
+          | купили и продают её теперь в интернете - они мою мазь поместили в&nbsp;ампулы по моему совету, и правильно сделали.
       .oldman__wrapper_author
         picture
           source(media="(max-width: 767px)", srcset="img/oldman_mob.webp", type="image/webp")
