--- a/src/templates/components/reviews.pug
+++ b/src/templates/components/reviews.pug
@@ -29,7 +29,7 @@ mixin review(slide)
       age: '28 лет',
       city: 'г. Краснодар',
       header: 'Я больше не боюсь защемления',
-      text: 'Я три года ходила с пупочной грыжей, и постоянно боялась, что она может защемиться. А операции я боялась ещё больше. Иногда она болела, и каждый раз, я думала, что всё… Спасибо форуму, почитала про растительные препараты, нашла там <span class="text__orange">Трауфрил</span>. Прошла курс, грыжа больше не побаливает и стала меньше вроде, я больше не боюсь защемления.',
+      text: 'Я три года ходила с пупочной грыжей, и постоянно боялась, что она может защемиться. А операции я боялась ещё больше. Иногда она болела, и каждый раз, я думала, что всё… Спасибо форуму, почитала про растительные препараты, нашла там <span class="text__orange">Трауфрил</span>. Прошла курс, грыжа больше не побаливает и стала меньше, я больше не боюсь защемления.',
       flag: 'before_after'
     },
     {
@@ -58,7 +58,7 @@ mixin review(slide)
       age: '49 лет',
       city: 'г. Псков',
       header: 'Действительно работают травы, это радует',
-      text: 'Я врачам не очень доверяю, у них на всё одни методы - операция. Я считаю любые операции противоестественными. Пробовала избавиться от грыжи при помощи велосипеда и разных упражнений, но ничего не помогало. А от велосипеда еще хуже стало, я очень испугалась тогда.. Я начала читать кто чем лечится, какие компоненты помогают. И народную медицину пробовала - травки прикладывала - не помогла. Вот нашла в интернете <span class="text__orange">Трауфрил</span>, решила заказать, состав очень интересный, и тем более цена такая низкая, можно попробовать. Мазала его 30 дней, как указано в инструкции. Грыжа стала меньше, наверное раза в три где-то, её почти нет. Действительно работают травы, это радует.'
+      text: 'Я врачам не очень доверяю, у них на всё одни методы - операция. Я считаю любые операции противоестественными. Пробовала избавиться от грыжи при помощи велосипеда и разных упражнений, но ничего не помогало. А от велосипеда еще хуже стало, я очень испугалась тогда... Я начала читать кто чем лечится, какие компоненты помогают. И народную медицину пробовала - травки прикладывала - не помогла. Вот нашла в интернете <span class="text__orange">Трауфрил</span>, решила заказать, состав очень интересный, и тем более цена такая низкая, можно попробовать. Мазала его 30 дней, как указано в инструкции. Грыжа стала меньше, наверное раза в три где-то, её почти нет. Действительно работают травы, это радует.'
     },
     {
       webp: 'review__06.webp',
@@ -75,7 +75,7 @@ mixin review(slide)
       img: 'review__07.png',
       name: 'Кристина, ',
       age: '35 лет',
-      city: 'г. СПБ',
+      city: 'г. Санкт-Петербург',
       header: 'Теперь не стесняюсь своего живота',
       text: 'Из-за пупочной грыжи мне было неловко показывать его, всегда носила одежду, которая закрывала эту уродливую опухоль. Вырезать, знаете, страшно, конечно, и я долго не решалась, потому что наслушалась историй страшных, какие последствия после операции. Спасибо моему брату, он нашел мне в интернете <span class="text__orange">Трауфрил</span>. Я мазала этим средством живот, и грыжа по чуть-чуть уменьшалась прямо на глазах. Сейчас спустя месяц её почти не видно, и я теперь не стесняюсь своего живота.',
       flag: 'before_after'
