--- a/src/templates/components/use.pug
+++ b/src/templates/components/use.pug
@@ -13,10 +13,10 @@ section.use.block
               h3.age__header.header__text Детям с 6 до 12 лет
               p.age__course рекомендуемый курс — от 20 дней
           picture
-            source(media="(max-width: 767px)", srcset="img/prod3_mob.webp", type="image/webp")
-            source(media="(max-width: 767px)", srcset="img/prod3_mob.png")
-            source(srcset="img/prod3.webp", type="image/webp")
-            img.use__prod(src="img/prod3.png", alt="Traufril")
+            source(media="(max-width: 767px)", srcset="img/prod_mob.webp", type="image/webp")
+            source(media="(max-width: 767px)", srcset="img/prod_mob.png")
+            source(srcset="img/prod.webp", type="image/webp")
+            img.use__prod(src="img/prod.png", alt="Traufril")
       .use__wrapper_right
         ul.use__how.howuse
           li.howuse__item
@@ -29,4 +29,4 @@ section.use.block
               span Используйте<br> ампулу полностью после вскрытия
           li.howuse__item
             p.howuse__text.howuse__text--4
-              span Применяйте<br> по 1 ампуле<br> утром и вечером
+              span Применяйте по 1 ампуле утром и вечером
