--- a/src/styles/components/bomb.scss
+++ b/src/styles/components/bomb.scss
@@ -7,6 +7,9 @@
     @include rm(1024) {
       margin-bottom: 20px;
     }
+    @include rm(1220) {
+      margin-bottom: 30px;
+    }
   }
 
   &__subtitle {
@@ -77,6 +80,12 @@
             margin-bottom: 30px;
           }
         }
+        @include rm(1220) {
+          & .danger__text {
+            padding-left: 85px;
+            margin-bottom: 50px;
+          }
+        }
       }
     }
 
@@ -127,7 +136,8 @@
           padding-bottom: 5px;
           left: 0;
           top: calc(50% - 32px);
-          background-size: 100% 20px;
+          background-size: 90% 20px;
+          background-position: left bottom;
         }
       }
     }
