--- a/src/styles/components/reviews.scss
+++ b/src/styles/components/reviews.scss
@@ -42,6 +42,7 @@
     @include rm(1280) {
       right: -45px;
       top: 175px;
+      top: calc(50% - 15px);
     }
   }
   
@@ -52,6 +53,7 @@
     @include rm(1280) {
       left: -45px;
       top: 162px;
+      top: calc(50% - 27px);
     }
   }
   .slick-dots {
@@ -112,7 +114,7 @@
       padding: 20px 0 35px;
     }
     @include rm(1280) {
-      align-items: flex-start;
+      align-items: stretch;
       padding: 30px 0 45px;
       margin: 0;
     }
@@ -139,9 +141,12 @@
         height: 220px;
       }
       @include rm(1280) {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         min-width: 370px;
-        height: 100%;
-        padding: 0;
+        height: auto;
+        padding: 15px 0 0;
       }
     }
     
