--- a/src/templates/components/popup.pug
+++ b/src/templates/components/popup.pug
@@ -4,6 +4,6 @@
       .popup__product-wrapper
         picture
           source(media="(max-width: 999px)", srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mP8/5+hHgAHggJ/PchI7wAAAABJRU5ErkJggg==")
-          source(srcset="img/prod3.webp", type="image/webp")
-          img.popup__product(src="img/prod3.png", alt="Traufril")
+          source(srcset="img/prod.webp", type="image/webp")
+          img.popup__product(src="img/prod.png", alt="Traufril")
       include order
