--- a/src/templates/components/promo.pug
+++ b/src/templates/components/promo.pug
@@ -25,11 +25,11 @@ section.promo.block
             span.text__black.black
               span.bg__line.bg__line__yellow Помогает
               |  забыть о грыже
-            |  защищая от развития заболеваний в ущемленных органах
+            |  защищая от развития заболеваний в&nbsp;ущемленных органах
       .promo__product
         picture
-          source(media="(max-width: 767px)", srcset="img/prod3_mob.webp", type="image/webp")
-          source(media="(max-width: 767px)", srcset="img/prod3_mob.png")
-          source(srcset="img/prod3.webp", type="image/webp")
-          img.product__img(src="img/prod3.png", alt="Traufril")
+          source(media="(max-width: 767px)", srcset="img/prod_mob.webp", type="image/webp")
+          source(media="(max-width: 767px)", srcset="img/prod_mob.png")
+          source(srcset="img/prod.webp", type="image/webp")
+          img.product__img(src="img/prod.png", alt="Traufril")
       include order
