second iteration fix

--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -32,7 +32,7 @@
         width: 500px;
         height: 90px;
         left: 5px;
-        bottom: -70px;
+        bottom: -50px;
         background: url(../img/line__grey.png) no-repeat left center;
         background-size: contain;
         transform: rotate(4deg);
@@ -43,8 +43,8 @@
     position: absolute;
     z-index: 2;
     max-width: 524px;
-    left: 0;
-    bottom: -40px;
+    left: 10px;
+    bottom: -30px;
   }
 }
 
