--- a/src/templates/components/delivery.pug
+++ b/src/templates/components/delivery.pug
@@ -11,7 +11,7 @@ section.delivery.block
           img.delivery__img(src="img/delivery__01.jpg", alt="Image", loading="lazy")
         .delivery__wrapper-text
           h3.delivery__header.header__text.bg__line.bg__line__grey Заполните форму заказа
-          p.delivery__text Вам нужно указать только свое имя<br> и номер телефона
+          p.delivery__text Вам нужно указать только<br> свое имя и номер телефона
       li.delivery__item
         span.delivery__arrow
         picture
@@ -19,7 +19,7 @@ section.delivery.block
           img.delivery__img(src="img/delivery__02.jpg", alt="Image", loading="lazy")
         .delivery__wrapper-text
           h3.delivery__header.header__text.header__text.bg__line.bg__line__grey Ответьте на звонок оператора
-          p.delivery__text Он уточнит ваши данные и ответит на все вопросы о продукте
+          p.delivery__text Он уточнит ваши данные и ответит<br> на все вопросы о продукте
       li.delivery__item
         picture
           source(srcset="img/delivery__03.webp", type="image/webp")
