--- a/src/templates/components/oldman.pug
+++ b/src/templates/components/oldman.pug
@@ -10,7 +10,7 @@ section.oldman.block
           | и я здоров как бык, ни одной операции за жизнь не делал. Хотя чего со 
           | мной только было: и болячки разные, и грыжи… Вырос я в семье травников, 
           | и занимаюсь этим всю жизнь. Я всегда находил правильное сочетание трав 
-          | и лечил себя сам! И за моими целебными рецептами вот уже лет&nbsp;70&nbsp;выстраиваются 
+          | и лечил себя сам! И за моими целебными рецептами вот уже 70&nbsp;лет выстраиваются 
           | очереди со всей округи.
         p.oldman__text Был у меня как-то один паренёк, 
           span.text__black.bold запущенный случай. У него грыжа возле пупка торчала. 
