--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -19,11 +19,11 @@
       &::before {
         position: absolute;
         content: '';
-        width: 425px;
-        height: 625px;
+        width: 545px;
+        height: 535px;
         bottom: 0;
         left: 0;
-        background: url(../img/man_3.png) no-repeat left bottom;
+        background: url(../img/man_2.png) no-repeat left bottom;
         border-bottom-left-radius: 6px;
       }
       &::after {
@@ -45,6 +45,9 @@
     max-width: 524px;
     left: 10px;
     bottom: -30px;
+  }
+  .order {
+    background: none;
   }
 }
 
