--- a/src/styles/components/stop.scss
+++ b/src/styles/components/stop.scss
@@ -96,6 +96,10 @@
       margin-bottom: 30px;
     }
   }
+  
+  &__text_wrapper {
+    width: 100%;
+  }
 
   &__header {
     margin-bottom: 10px;
@@ -128,6 +132,7 @@
   }
 
   &__text {
+    width: 100%;
     color: $grey-text-color;
     text-align: center;
     @include rm(640) {
