--- a/src/templates/components/form.pug
+++ b/src/templates/components/form.pug
@@ -2,11 +2,11 @@ form.form.x_order_form(action="/submit", method="post")
   label.form__label.form__label__name
     svg(viewBox="0 0 18 24", width="18")
         use(xlink:href="#user")
-    input.form__input(type="text", name="name", placeholder="Имя", required)
+    input.form__input(type="text", name="name", placeholder="Мое имя", required)
   label.form__label.form__label__phone
     svg(viewBox="0 0 18 20", width="18")
       use(xlink:href="#phone")
-    input.form__input(type="tel", name="phone", placeholder="Телефон", required)
+    input.form__input(type="tel", name="phone", placeholder="Мой телефон", required)
   button.form__button.btn.bold(type="submit")
     span.btn__biger_text Заказать 
     span.btn__smaller_text со скидкой
