--- a/src/templates/components/stop.pug
+++ b/src/templates/components/stop.pug
@@ -29,6 +29,6 @@ section.stop.block
           p.stop__text Поскольку вы будете жить с постоянным риском ущемления грыжи, болью<br> и дискомфортом.
     p.stop__bottom.stop__bottom__big Теперь для вас доступен 
       span.text__orange Трауфрил 
-      | — новый метод лечения,
+      | — новый метод&nbsp;лечения,
     p.stop__bottom.stop__bottom__small который избавляет вас от проблем с грыжей 
-      span.text__orange без операций риска для здоровья!
+      span.text__orange без&nbsp;операций риска для&nbsp;здоровья!
