--- a/src/templates/components/use.pug
+++ b/src/templates/components/use.pug
@@ -2,16 +2,16 @@ section.use.block
   .container
     .use__wrapper
       .use__wrapper_left
-        h2.use__title.title.title__line Как применять
+        h2.use__title.title.title__line Как применять 
           span.text__orange Трауфрил
         .use__wrapper--small
           ul.use__list.age
             li.age__item
-              h3.age__header.header__text Взрослым и детям от 12 лет
-              p.age__course рекомендуемый курс — от 30 дней
+              h3.age__header.header__text Взрослым и детям от 12&nbsp;лет
+              p.age__course рекомендуемый курс — от 30&nbsp;дней
             li.age__item
-              h3.age__header.header__text Детям с 6 до 12 лет
-              p.age__course рекомендуемый курс — от 20 дней
+              h3.age__header.header__text Детям с 6 до 12&nbsp;лет
+              p.age__course рекомендуемый курс — от 20&nbsp;дней
           picture
             source(media="(max-width: 767px)", srcset="img/prod_mob.webp", type="image/webp")
             source(media="(max-width: 767px)", srcset="img/prod_mob.png")
