--- a/src/styles/components/oldman.scss
+++ b/src/styles/components/oldman.scss
@@ -81,6 +81,7 @@
   }
   &__who {
     // font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    width: 100%;
     font-size: 17px;
     font-style: italic;
   }
