--- a/src/templates/components/complications.pug
+++ b/src/templates/components/complications.pug
@@ -17,7 +17,7 @@ section.complications.block.bg
             source(srcset="img/complications__02.webp", type="image/webp")
             img.complications__img(src="img/complications__02.jpg", alt="image", loading="lazy")
         h3.complications__header.bg__line.bg__line__white Невправимость
-        p.complications__text Со временем от грыжи уже не&nbsp;избавиться ручным вправлением. Она становится больше, выпирает из-под одежды.
+        p.complications__text Со временем от грыжи уже не&nbsp;избавиться ручным вправлением. Она становится больше, выпирает из брюшной полости.
           span.text__blue  Поможет только операция.
       li.complications__item
         .complications__img_wrapper
