--- a/src/styles/components/stop.scss
+++ b/src/styles/components/stop.scss
@@ -177,6 +177,9 @@
     }
     &__small {
       font-size: 18px;
+      @include rm(768) {
+        font-size: 21px;
+      }
       @include rm(1024) {
         font-size: 22px;
       }
